private_dot_emacs.d/insert/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $1
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
spec:
  ingressClassName: $2
  tls:
  - hosts:
    - $3
    secretName: $1-ingress-certs
  rules:
  - host: $3
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: $4
            port:
              number: 80
